# yudao-pilot-mcp

./: .cursorignore  .cursorindexingignore  .gitignore  LICENSE  README.md  pyproject.toml  work.json
.ai/: agent.md  ai-integration.md  bootstrap.md  dev-standards.md  work.json
.github/workflows/: release.yml
.omx/: metrics.json  notepad.md
.omx/context/: codegen-gap-fixes-20260407T051911Z.md  codegen-sql-naming-20260407T082138Z.md  mcp-skill-20260406T151931Z.md
.omx/interviews/: codegen-gap-fixes-20260407T052950Z.md  codegen-sql-naming-20260407T081358Z.md  mcp-skill-20260407T022129Z.md
.omx/logs/: notify-hook-2026-04-07.jsonl  tmux-hook-2026-04-06.jsonl  tmux-hook-2026-04-07.jsonl  turns-2026-04-06.jsonl  turns-2026-04-07.jsonl
.omx/plans/: autopilot-impl.md  autopilot-spec.md  prd-codegen-frontend-todo-fill.md  prd-codegen-sql-naming.md  test-spec-codegen-frontend-todo-fill.md  test-spec-codegen-sql-naming.md
.omx/specs/: deep-interview-codegen-gap-fixes.md  deep-interview-codegen-sql-naming.md  deep-interview-mcp-skill.md
.omx/state/: deep-interview-state.json  hud-state.json  notify-hook-state.json  ralph-progress.json  skill-active-state.json  tmux-hook-state.json
docs/: README.md  configuration.md  development.md  frontend-output-matrix.md  overview.md  product.md  roadmap.md  sql-codegen.md  tools.md
skills/yudao-pilot-mcp/: SKILL.md
src/yudao_pilot/: __init__.py  codegen.py  config.py  database.py  inspector.py  (+7 more)
tests/: conftest.py  test_auto_init_config.py  test_dev_workspace.py  test_mcp_tools.py  test_project_detection.py  test_writer.py
(+1 files in other folders)
