[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "yudao-pilot-mcp"
version = "0.1.0"
description = "面向 yudao 生态的 MCP 智能开发助手"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
authors = [
  { name = "Yudao Pilot Contributors" }
]
dependencies = [
  "fastmcp>=2.7.0",
  "pydantic>=2.8.0",
  "PyMySQL>=1.1.1",
  "PyYAML>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
]

[project.scripts]
yudao-pilot = "yudao_pilot.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yudao_pilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
